--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -144,7 +144,7 @@
 						</div><!-- /.col -->
 					</div><!-- /.row -->
 					<div class="s-brands-link">
-						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg></a>
 					</div>
 				</section>
 				<section class="mt-48">
@@ -266,7 +266,7 @@
 						</div><!-- /.col -->
 					</div><!-- /.row -->
 					<div class="s-brands-link">
-						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg></a>
 					</div>
 				</section>
 				<section class="mt-48">
@@ -388,7 +388,7 @@
 						</div><!-- /.col -->
 					</div><!-- /.row -->
 					<div class="s-brands-link">
-						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg></a>
 					</div>
 				</section>
 
