--- a/app/page-payment.html
+++ b/app/page-payment.html
@@ -44,7 +44,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-1" aria-expanded="false">
 										<span>Наличный расчет</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -83,7 +83,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-2" aria-expanded="false">
 										<span>Банковской картой</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -110,7 +110,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-3" aria-expanded="false">
 										<span>Безналичный расчет</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -186,7 +186,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-4" aria-expanded="false">
 										<span>Перевод на карты банков</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -206,7 +206,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-5" aria-expanded="false">
 										<span>Электронные деньги</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
