--- a/app/page-services-single.html
+++ b/app/page-services-single.html
@@ -29,7 +29,7 @@
 							<p class="heading-descr text-white text-sm">автоматических, секционных, гаражных, откатных ворот, рольставней и шлагбаумов</p>
 						</div>
 						<div class="quick-service">
-							<svg class="quick-service-icon icon icon-bolt"><use xlink:href="images/symbol-defs.svg#bolt"></use></svg>
+							<svg class="quick-service-icon icon icon-bolt"><use xlink:href="./images/symbol-defs.svg#bolt"></use></svg>
 							<span class="quick-service-title text-white">Возможен срочный выезд специалиста в течение нескольких часов</span>
 						</div>
 					</div><!-- /.s-heroes-content -->
