--- a/app/page-shop-cart.html
+++ b/app/page-shop-cart.html
@@ -75,7 +75,7 @@
 							</div>
 							<div class="delete">
 								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
-									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+									<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
 						</form><!-- /.s-cart-table-item -->
@@ -114,7 +114,7 @@
 							</div>
 							<div class="delete">
 								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
-									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+									<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
 						</form><!-- /.s-cart-table-item -->
@@ -153,7 +153,7 @@
 							</div>
 							<div class="delete">
 								<a href="#" class="delete-btn" data-toggle="tooltip" title="Удалить из корзины" data-placement="left" role="button" rel="nofollow">
-									<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+									<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 								</a>
 							</div>
 						</form><!-- /.s-cart-table-item -->
@@ -173,11 +173,11 @@
 					</div>
 					<div class="s-cart-actions--right">
 						<button type="button" class="print-cart btn" onclick="window.print()">
-							<svg class="icon icon-print"><use xlink:href="images/symbol-defs.svg#print"></use></svg>
+							<svg class="icon icon-print"><use xlink:href="./images/symbol-defs.svg#print"></use></svg>
 							<span>Распечатать корзину</span>
 						</button>
 						<a href="#" class="clear-cart btn" role="button" rel="nofollow">
-							<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+							<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 							<span>Очистить корзину</span>
 						</a>
 						<div class="summary text-md w-bold">Итого: 307 600 руб.</div>
@@ -194,7 +194,7 @@
 						<div class="checkout-support">
 							<div class="checkout-support-heading">
 								<div class="picture">
-									<svg class="icon icon-support"><use xlink:href="images/symbol-defs.svg#support"></use></svg>
+									<svg class="icon icon-support"><use xlink:href="./images/symbol-defs.svg#support"></use></svg>
 								</div>
 								<div class="checkbox form-checkbox">
 									<input type="checkbox" name="checkout-support" id="checkout-support">
@@ -462,7 +462,7 @@
 							<div class="checkout-summary">
 								<div class="checkout-summary-heading">
 									<div class="picture">
-										<svg class="icon icon-clock"><use xlink:href="images/symbol-defs.svg#clock"></use></svg>
+										<svg class="icon icon-clock"><use xlink:href="./images/symbol-defs.svg#clock"></use></svg>
 									</div>
 									<div class="title title text-sm w-medium">Ваш заказ будет обработан в течении <span class="text-green">30 минут</span> рабочего времени (с 9-00 до 18-00 с понедельника по пятницу)</div>
 								</div>
