--- a/app/page-shop-product.html
+++ b/app/page-shop-product.html
@@ -89,10 +89,10 @@
 									</div><!-- /.swiper-container -->
 									<div class="product-gallery-slider-nav swiper-nav">
 										<button class="swiper-button-prev btn">
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</button>
 										<button class="swiper-button-next btn">
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</button>
 									</div><!-- /.swiper-nav -->
 								</div><!-- /.product-gallery-slider -->
@@ -221,7 +221,7 @@
 									</table>
 								</div>
 								<div class="all-attributes mt-16">
-									<a href="#" class="link-arrow">Все характеристики <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
+									<a href="#" class="link-arrow">Все характеристики <svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg></a>
 								</div>
 								<script>
 									document.querySelector('.all-attributes .link-arrow').addEventListener('click', function(e) {
@@ -258,7 +258,7 @@
 							<div class="product-info">
 								<div class="product-info-print">
 									<button type="button" class="btn" onclick="window.print()" data-toggle="tooltip" data-placement="left" title="Распечатать страницу">
-										<svg class="icon icon-print"><use xlink:href="images/symbol-defs.svg#print"></use></svg>
+										<svg class="icon icon-print"><use xlink:href="./images/symbol-defs.svg#print"></use></svg>
 									</button>
 								</div><!-- /.product-info-print -->
 								<div class="product-info-price">
@@ -290,7 +290,7 @@
 											<button type="submit" class="btn btn-green btn-purchase">
 												<div class="before-added">В корзину</div>
 												<div class="after-added">
-													<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
+													<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
 													<span>Товар добавлен<br> в <a href="#">корзину</a></span>
 												</div>
 											</button>
@@ -318,11 +318,11 @@
 								<div class="product-info-actions">
 									<div class="buttons">
 										<a href="#" class="btn btn-secondary _added">
-											<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
+											<svg class="icon icon-star"><use xlink:href="./images/symbol-defs.svg#star"></use></svg>
 											<span>В избранном</span>
 										</a>
 										<a href="#" class="btn btn-secondary">
-											<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
+											<svg class="icon icon-compare"><use xlink:href="./images/symbol-defs.svg#compare"></use></svg>
 											<span>Сравнить</span>
 										</a>
 									</div>
@@ -387,7 +387,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-1" aria-expanded="false">
 											<span>Характеристики</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -466,7 +466,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-2" aria-expanded="false">
 											<span>Описание</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -515,7 +515,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-3" aria-expanded="false">
 											<span>Комплектация</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -570,7 +570,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-4" aria-expanded="false">
 											<span>Отзывы (2)</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -584,11 +584,11 @@
 													<div class="card-testimonial mb-24">
 														<div class="card-heading">
 															<div class="rating">
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 															</div>
 															<div class="date">16 января 2020</div>
 														</div>
@@ -602,11 +602,11 @@
 													<div class="card-testimonial mb-24">
 														<div class="card-heading">
 															<div class="rating">
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+																<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 															</div>
 															<div class="date">16 января 2020</div>
 														</div>
@@ -670,7 +670,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-5" aria-expanded="false">
 											<span>Документация</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -709,7 +709,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-6" aria-expanded="false">
 											<span>Доставка</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -742,7 +742,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-7" aria-expanded="false">
 											<span>Возврат</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -769,7 +769,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-8" aria-expanded="false">
 											<span>Оплата</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -803,7 +803,7 @@
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapse-9" aria-expanded="false">
 											<span>С нами надёжно!</span>
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</a>
 									</h5>
 								</div>
@@ -918,10 +918,10 @@
 					</div><!-- /.swiper-container -->
 					<div class="products-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.products-slider-nav -->
 					<div class="products-slider-dots swiper-dots">
@@ -971,10 +971,10 @@
 					</div><!-- /.swiper-container -->
 					<div class="products-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.products-slider-nav -->
 					<div class="products-slider-dots swiper-dots">
