--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -24,7 +24,7 @@
 					</div>
 					<div class="shop-promo-close">
 						<button type="button" class="btn btn-close">
-							<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+							<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 						</button>
 					</div>
 				</div>
@@ -40,7 +40,7 @@
 							<button type="button" class="btn btn-dropdown" id="dropdownAdressMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Адрес и режим работы</button>
 							<div class="dropdown-menu" aria-labelledby="dropdownAdressMenu">
 								<div class="dropdown-adress-item">
-									<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+									<svg class="icon icon-location"><use xlink:href="./images/symbol-defs.svg#location"></use></svg>
 									<div class="content">
 										<span>Офис 1</span>
 										<p>г. Москва, ул. Летчика Бабушкина, д 103, кор. 4К, оф. 233</p>
@@ -48,7 +48,7 @@
 									</div>
 								</div><!-- /.dropdown-adress-item -->
 								<div class="dropdown-adress-item">
-									<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+									<svg class="icon icon-location"><use xlink:href="./images/symbol-defs.svg#location"></use></svg>
 									<div class="content">
 										<span>Офис 2</span>
 										<p>г. Москва, ул. 8 марта Бабушкина, д 45, оф. 245</p>
@@ -61,7 +61,7 @@
 
 					<div class="col-auto header-top-btns">
 						<button type="button" class="btn btn-yellow btn-sm" data-toggle="modal" data-target="#freeAdviceModal">
-							<svg class="icon icon-support"><use xlink:href="images/symbol-defs.svg#support"></use></svg>
+							<svg class="icon icon-support"><use xlink:href="./images/symbol-defs.svg#support"></use></svg>
 							<span>Бесплатная консультация</span>
 						</button>
 						<button type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#checkOrderStatusModal">Что с моим заказом?</button>
@@ -105,7 +105,7 @@
 
 					<div class="col-auto header-middle-burger">
 						<button class="toggle-mmenu-btn">
-							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
+							<svg class="icon icon-bars"><use xlink:href="./images/symbol-defs.svg#bars"></use></svg>
 						</button>
 					</div><!-- /.header-middle-burger -->
 
@@ -119,7 +119,7 @@
 						<div class="heading">
 							<span class="heading-title text-lg w-bold">Поиск</span>
 							<button class="heading-btn btn btn-close">
-								<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+								<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 							</button>
 						</div>
 						<form class="form form-search">
@@ -127,7 +127,7 @@
 								<input type="text" id="header-search-field" class="form-control" placeholder="Поиск" required autocomplete="off">
 								<label for="header-search-field">Поиск</label>
 							</div>
-							<button type="submit" class="btn btn-yellow btn-submit"><svg class="icon icon-search"><use xlink:href="images/symbol-defs.svg#search"></use></svg></button>
+							<button type="submit" class="btn btn-yellow btn-submit"><svg class="icon icon-search"><use xlink:href="./images/symbol-defs.svg#search"></use></svg></button>
 						</form>
 						<div class="search-results">
 							<div class="search-results-wrapper">
@@ -144,7 +144,7 @@
 									<span class="products-title mb-8">Товары</span>
 									<div class="products-results">
 										<span>Найдено: 140 товаров</span>
-										<a href="page-search.html" class="link-arrow">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></a>
+										<a href="page-search.html" class="link-arrow">Все результаты поиска <svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg></a>
 									</div>
 									<ul class="products-list">
 										<li>
@@ -197,7 +197,7 @@
 					<div class="col header-middle-contacts">
 						<div class="phone">
 							<div class="phone-icon">
-								<svg class="icon icon-phone-alt"><use xlink:href="images/symbol-defs.svg#phone-alt"></use></svg>
+								<svg class="icon icon-phone-alt"><use xlink:href="./images/symbol-defs.svg#phone-alt"></use></svg>
 							</div>
 							<div class="phone-list">
 								<a href="tel:+74951283027" class="text-xs w-bold">+7 (495) 128-30-27</a>
@@ -206,7 +206,7 @@
 						</div>
 						<div class="mail">
 							<div class="mail-icon">
-								<svg class="icon icon-mail-alt"><use xlink:href="images/symbol-defs.svg#mail-alt"></use></svg>
+								<svg class="icon icon-mail-alt"><use xlink:href="./images/symbol-defs.svg#mail-alt"></use></svg>
 							</div>
 							<div class="mail-list">
 								<a href="mailto:zakaz@avtomatikavorot750.ru" class="text-xs w-bold">zakaz@avtomatikavorot750.ru</a>
@@ -218,14 +218,14 @@
 						<div class="search d-xl-none">
 							<div class="search-icon">
 								<button class="btn btn-secondary btn-search">
-									<svg class="icon icon-search"><use xlink:href="images/symbol-defs.svg#search"></use></svg>
+									<svg class="icon icon-search"><use xlink:href="./images/symbol-defs.svg#search"></use></svg>
 								</button>
 							</div>
 						</div><!-- /.compare -->
 						<div class="compare d-none d-sm-block">
 							<div class="compare-icon">
 								<a href="page-shop-compare.html" class="btn btn-secondary btn-compare">
-									<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
+									<svg class="icon icon-compare"><use xlink:href="./images/symbol-defs.svg#compare"></use></svg>
 								</a>
 							</div>
 						</div><!-- /.compare -->
@@ -233,7 +233,7 @@
 							<div class="wishlist-icon">
 								<a href="page-shop-wishlist.html" class="btn btn-secondary btn-wishlist">
 									<span class="badge">2</span>
-									<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
+									<svg class="icon icon-star"><use xlink:href="./images/symbol-defs.svg#star"></use></svg>
 								</a>
 							</div>
 							<div class="wishlist-widget">
@@ -252,7 +252,7 @@
 												</div>
 											</a>
 											<a href="#" class="products-list-delete">
-												<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+												<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 											</a>
 										</li>
 										<li class="products-list-item">
@@ -268,7 +268,7 @@
 												</div>
 											</a>
 											<a href="#" class="products-list-delete">
-												<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+												<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 											</a>
 										</li>
 									</ul>
@@ -280,7 +280,7 @@
 							<div class="shopping-cart-icon">
 								<a href="page-shop-cart.html" class="btn btn-secondary btn-shopping-cart">
 									<span class="badge">11</span>
-									<svg class="icon icon-cart"><use xlink:href="images/symbol-defs.svg#cart"></use></svg>
+									<svg class="icon icon-cart"><use xlink:href="./images/symbol-defs.svg#cart"></use></svg>
 								</a>
 							</div>
 							<div class="shopping-cart-content">
@@ -309,7 +309,7 @@
 												</div>
 											</div>
 											<a href="#" class="products-list-delete">
-												<svg class="icon icon-trash-alt"><use xlink:href="images/symbol-defs.svg#trash-alt"></use></svg>
+												<svg class="icon icon-trash-alt"><use xlink:href="./images/symbol-defs.svg#trash-alt"></use></svg>
 											</a>
 										</li>
 									</ul>
@@ -330,7 +330,7 @@
 
 					<div class="col-auto header-bottom-catalog">
 						<a href="page-shop-catalog.html" class="catalog-btn btn btn-yellow">
-							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
+							<svg class="icon icon-bars"><use xlink:href="./images/symbol-defs.svg#bars"></use></svg>
 							<span>Каталог</span>
 						</a>
 						<nav class="catalog-nav">
@@ -338,7 +338,7 @@
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Автоматика для ворот</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 									<div class="catalog-nav-submenu">
 										<h3 class="menu-title mb-24">Автоматика для ворот</h3>
@@ -469,7 +469,7 @@
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Шлагбаумы</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 									<div class="catalog-nav-submenu">
 										<h3 class="menu-title mb-24">Шлагбаумы</h3>
@@ -559,25 +559,25 @@
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Комплектующие для ворот</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</li>
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Парковочное оборудование</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</li>
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Пульты</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</li>
 								<li class="catalog-nav-item">
 									<a href="#" class="catalog-nav-link">
 										<span>Аксессуары</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</li>
 							</ul>
