--- a/app/parts/home/heroes.html
+++ b/app/parts/home/heroes.html
@@ -23,10 +23,10 @@
 					</div><!-- /.swiper-wrapper -->
 					<div class="h-heroes-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.h-heroes-slider-nav -->
 					<div class="h-heroes-slider-dots swiper-dots">
@@ -66,10 +66,10 @@
 					</div><!-- /.swiper-wrapper -->
 					<div class="h-heroes-product-slider-nav swiper-nav">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</button>
 					</div><!-- /.h-heroes-product-slider-nav -->
 					<div class="h-heroes-product-slider-dots swiper-dots">
