--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -4,7 +4,7 @@
 		<div class="mmenu-heading">
 			<span class="mmenu-heading-title text-lg w-bold">Меню</span>
 			<button class="mmenu-heading-btn btn btn-close">
-				<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+				<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 			</button>
 		</div><!-- /.mmenu-heading -->
 
@@ -12,12 +12,12 @@
 
 			<div class="mmenu-main-catalog">
 				<button class="btn btn-yellow">
-					<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
+					<svg class="icon icon-bars"><use xlink:href="./images/symbol-defs.svg#bars"></use></svg>
 					<span>Каталог</span>
 				</button>
 				<div class="submenu">
 					<button class="submenu-back-btn">
-						<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+						<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						<span>Назад</span>
 					</button>
 					<div class="submenu-title text-lg w-bold">Каталог</div>
@@ -39,7 +39,7 @@
 					<div class="shopping-cart-icon">
 						<button class="btn btn-secondary btn-shopping-cart">
 							<span class="badge">11</span>
-							<svg class="icon icon-cart"><use xlink:href="images/symbol-defs.svg#cart"></use></svg>
+							<svg class="icon icon-cart"><use xlink:href="./images/symbol-defs.svg#cart"></use></svg>
 						</button>
 					</div>
 					<div class="shopping-cart-content">
@@ -50,7 +50,7 @@
 				<a href="page-shop-compare.html" class="compare">
 					<div class="compare-icon">
 						<button class="btn btn-secondary btn-compare">
-							<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
+							<svg class="icon icon-compare"><use xlink:href="./images/symbol-defs.svg#compare"></use></svg>
 						</button>
 					</div>
 					<div class="wishlist-content">
@@ -60,7 +60,7 @@
 				<a href="page-shop-wishlist.html" class="wishlist">
 					<div class="wishlist-icon">
 						<button class="btn btn-secondary btn-wishlist">
-							<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
+							<svg class="icon icon-star"><use xlink:href="./images/symbol-defs.svg#star"></use></svg>
 						</button>
 					</div>
 					<div class="wishlist-content">
@@ -72,10 +72,10 @@
 			<div class="mmenu-main-nav">
 				<ul class="menu">
 					<li class="menu-item">
-						<span>О компании <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></span>
+						<span>О компании <svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg></span>
 						<div class="submenu">
 							<button class="submenu-back-btn">
-								<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+								<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 								<span>Назад</span>
 							</button>
 							<div class="submenu-title text-lg w-bold">О компании</div>
@@ -91,10 +91,10 @@
 					<li class="menu-item"><a href="page-delivery.html">Доставка</a></li>
 					<li class="menu-item"><a href="page-payment.html">Оплата</a></li>
 					<li class="menu-item">
-						<span>Покупателю <svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg></span>
+						<span>Покупателю <svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg></span>
 						<div class="submenu">
 							<button class="submenu-back-btn">
-								<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+								<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 								<span>Назад</span>
 							</button>
 							<div class="submenu-title text-lg w-bold">Покупателю</div>
@@ -112,7 +112,7 @@
 			<div class="mmenu-main-contacts">
 				<div class="phone">
 					<div class="phone-icon">
-						<svg class="icon icon-phone-alt"><use xlink:href="images/symbol-defs.svg#phone-alt"></use></svg>
+						<svg class="icon icon-phone-alt"><use xlink:href="./images/symbol-defs.svg#phone-alt"></use></svg>
 					</div>
 					<div class="phone-list">
 						<a href="tel:+74951283027" class="text-xs w-bold">+7 (495) 128-30-27</a>
@@ -121,7 +121,7 @@
 				</div>
 				<div class="mail mt-8">
 					<div class="mail-icon">
-						<svg class="icon icon-mail-alt"><use xlink:href="images/symbol-defs.svg#mail-alt"></use></svg>
+						<svg class="icon icon-mail-alt"><use xlink:href="./images/symbol-defs.svg#mail-alt"></use></svg>
 					</div>
 					<div class="mail-list">
 						<a href="mailto:zakaz@avtomatikavorot750.ru" class="text-xs w-bold">zakaz@avtomatikavorot750.ru</a>
@@ -132,7 +132,7 @@
 			<div class="mmenu-main-adress">
 				<div class="mmenu-main-adress-title text-xs">Адрес и режим работы</div>
 				<div class="mmenu-main-adress-item">
-					<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+					<svg class="icon icon-location"><use xlink:href="./images/symbol-defs.svg#location"></use></svg>
 					<div class="content">
 						<span>Офис 1</span>
 						<p>г. Москва, ул. Летчика Бабушкина, д 103, кор. 4К, оф. 233</p>
@@ -140,7 +140,7 @@
 					</div>
 				</div>
 				<div class="mmenu-main-adress-item">
-					<svg class="icon icon-location"><use xlink:href="images/symbol-defs.svg#location"></use></svg>
+					<svg class="icon icon-location"><use xlink:href="./images/symbol-defs.svg#location"></use></svg>
 					<div class="content">
 						<span>Офис 2</span>
 						<p>г. Москва, ул. 8 марта Бабушкина, д 45, оф. 245</p>
@@ -151,7 +151,7 @@
 
 			<div class="mmenu-main-support">
 				<button type="button" class="btn btn-yellow" data-toggle="modal" data-target="#freeAdviceModal">
-					<svg class="icon icon-support"><use xlink:href="images/symbol-defs.svg#support"></use></svg>
+					<svg class="icon icon-support"><use xlink:href="./images/symbol-defs.svg#support"></use></svg>
 					<span>Бесплатная консультация</span>
 				</button>
 				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#checkOrderStatusModal">Что с моим заказом?</button>
