--- a/app/parts/modals/check-order-status.html
+++ b/app/parts/modals/check-order-status.html
@@ -5,7 +5,7 @@
 			<div class="modal-header">
 				<h5 class="title text-lg w-bold">Что с моим заказом?</h5>
 				<button type="button" class="btn btn-close" data-dismiss="modal">
-					<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+					<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 				</button>
 			</div>
 			<div class="modal-body">
