--- a/app/parts/modals/quick-view-product.html
+++ b/app/parts/modals/quick-view-product.html
@@ -5,7 +5,7 @@
 			<div class="modal-header">
 				<h5 class="title text-lg w-bold text-center">Быстрый просмотр</h5>
 				<button type="button" class="btn btn-close" data-dismiss="modal">
-					<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+					<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 				</button>
 			</div>
 			<div class="modal-body">
@@ -18,9 +18,9 @@
 					<div class="qv-product-nav nav nav-tabs" role="tablist">
 						<a class="nav-link active" id="qv-gallery-tab" data-toggle="tab" href="#qv-gallery" role="tab" aria-controls="qv-gallery" aria-selected="true">Фото</a>
 						<a class="nav-link" id="qv-attributes-tab" data-toggle="tab" href="#qv-attributes" role="tab" aria-controls="qv-attributes" aria-selected="false">Характеристики</a>
-						<a class="permalink blue-link" href="#" class="product-link">
+						<a class="permalink blue-link" href="#">
 							<span>Подробнее о товаре</span>
-							<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+							<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 						</a>
 					</div><!-- /.qv-product-nav -->
 
@@ -65,10 +65,10 @@
 									</div><!-- /.swiper-container -->
 									<div class="product-gallery-slider-nav swiper-nav">
 										<button class="swiper-button-prev btn">
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</button>
 										<button class="swiper-button-next btn">
-											<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+											<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 										</button>
 									</div><!-- /.product-gallery-slider-nav -->
 								</div><!-- /.product-gallery-slider -->
@@ -158,7 +158,7 @@
 							<button type="submit" class="btn btn-green btn-purchase btn-submit">
 								<div class="before-added">В корзину</div>
 								<div class="after-added">
-									<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
+									<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
 									<span>Товар добавлен<br> в <a href="#">корзину</a></span>
 								</div>
 							</button>
