--- a/app/parts/shop/shop-settings.html
+++ b/app/parts/shop/shop-settings.html
@@ -27,7 +27,7 @@
 			</div><!-- /.s-sort-dropdown -->
 			<div class="s-filter">
 				<button class="s-filter-btn btn" id="toggle-filters-sidebar">
-					<svg class="icon icon-filter"><use xlink:href="images/symbol-defs.svg#filter"></use></svg>
+					<svg class="icon icon-filter"><use xlink:href="./images/symbol-defs.svg#filter"></use></svg>
 					<span>Фильтр</span>
 				</button>
 			</div>
