--- a/app/parts/shop/shop-sidebar.html
+++ b/app/parts/shop/shop-sidebar.html
@@ -3,7 +3,7 @@
 	<div class="shop-filters-heading mb-24">
 		<span class="title text-sm w-medium">Фильтры</span>
 		<button class="btn btn-close">
-			<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+			<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 		</button>
 	</div>
 	<div class="widget-inner">
