--- a/app/page-faq.html
+++ b/app/page-faq.html
@@ -43,7 +43,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-1" aria-expanded="false">
 										<span>Доставка и оплата</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -66,7 +66,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-2" aria-expanded="false">
 										<span>Заказ</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -89,7 +89,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-3" aria-expanded="false">
 										<span>Обмен</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
@@ -112,7 +112,7 @@
 								<h5 class="mb-0">
 									<a data-toggle="collapse" href="#collapse-4" aria-expanded="false">
 										<span>Другие вопросы</span>
-										<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+										<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 									</a>
 								</h5>
 							</div>
