--- a/app/page-services-single-2.html
+++ b/app/page-services-single-2.html
@@ -29,7 +29,7 @@
 							<p class="heading-descr text-white text-sm">автоматических, секционных, гаражных, откатных ворот, рольставней и шлагбаумов</p>
 						</div>
 						<div class="quick-service">
-							<svg class="quick-service-icon icon icon-bolt"><use xlink:href="images/symbol-defs.svg#bolt"></use></svg>
+							<svg class="quick-service-icon icon icon-bolt"><use xlink:href="./images/symbol-defs.svg#bolt"></use></svg>
 							<span class="quick-service-title text-white">Возможен срочный выезд специалиста в течение нескольких часов</span>
 						</div>
 					</div><!-- /.s-heroes-content -->
@@ -360,11 +360,11 @@
 									<div class="card card-testimonial">
 										<div class="card-heading">
 											<div class="rating">
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 											</div>
 											<div class="date">16 января 2020</div>
 										</div>
@@ -380,11 +380,11 @@
 									<div class="card card-testimonial">
 										<div class="card-heading">
 											<div class="rating">
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 											</div>
 											<div class="date">20 мая 2020</div>
 										</div>
@@ -400,11 +400,11 @@
 									<div class="card card-testimonial">
 										<div class="card-heading">
 											<div class="rating">
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 											</div>
 											<div class="date">9 октября 2020</div>
 										</div>
@@ -420,11 +420,11 @@
 									<div class="card card-testimonial">
 										<div class="card-heading">
 											<div class="rating">
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-												<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+												<svg class="icon icon-rating"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 											</div>
 											<div class="date">9 октября 2020</div>
 										</div>
@@ -440,10 +440,10 @@
 						</div><!-- /.swiper-container -->
 						<div class="s-testimonials-slider-nav swiper-nav">
 							<button class="swiper-button-prev btn">
-								<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+								<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 							</button>
 							<button class="swiper-button-next btn">
-								<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+								<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 							</button>
 						</div><!-- /.h-partners-slider-nav -->
 						<div class="s-testimonials-slider-dots swiper-dots">
