--- a/app/page-shop-compare.html
+++ b/app/page-shop-compare.html
@@ -77,10 +77,10 @@
 							</div><!-- /.swiper-container -->
 							<div class="compare-products-slider-nav swiper-nav">
 								<button class="swiper-button-prev btn">
-									<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+									<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 								</button>
 								<button class="swiper-button-next btn">
-									<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+									<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 								</button>
 							</div><!-- /.compare-products-slider-nav -->
 						</div><!-- /.compare-products-slider -->
