--- a/app/page-shop-wishlist.html
+++ b/app/page-shop-wishlist.html
@@ -76,16 +76,16 @@
 									<div class="card-buttons">
 										<div class="card-buttons-group">
 											<a href="#" class="btn btn-secondary _added">
-												<svg class="icon icon-compare"><use xlink:href="images/symbol-defs.svg#compare"></use></svg>
+												<svg class="icon icon-compare"><use xlink:href="./images/symbol-defs.svg#compare"></use></svg>
 											</a>
 											<a href="#" class="btn btn-secondary">
-												<svg class="icon icon-star"><use xlink:href="images/symbol-defs.svg#star"></use></svg>
+												<svg class="icon icon-star"><use xlink:href="./images/symbol-defs.svg#star"></use></svg>
 											</a>
 										</div>
 										<button class="btn btn-green btn-purchase _added">
 											<div class="before-added">В корзину</div>
 											<div class="after-added">
-												<svg class="icon icon-checked"><use xlink:href="images/symbol-defs.svg#checked"></use></svg>
+												<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
 												<span>Товар добавлен<br> в <a href="#">корзину</a></span>
 											</div>
 										</button>
