--- a/app/page-testimonials.html
+++ b/app/page-testimonials.html
@@ -28,11 +28,11 @@
 						<div class="card-testimonial mb-24">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">16 января 2020</div>
 							</div>
@@ -46,11 +46,11 @@
 						<div class="card-testimonial mb-24">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">16 января 2020</div>
 							</div>
@@ -64,11 +64,11 @@
 						<div class="card-testimonial mb-24">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">16 января 2020</div>
 							</div>
@@ -82,11 +82,11 @@
 						<div class="card-testimonial mb-24">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">16 января 2020</div>
 							</div>
