--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -86,9 +86,9 @@
 							<div class="social">
 								<div class="social-title">Мы в социальных сетях</div>
 								<div class="social-list">
-									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-vk"><use xlink:href="images/symbol-defs.svg#vk"></use></svg></a>
-									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-youtube"><use xlink:href="images/symbol-defs.svg#youtube"></use></svg></a>
-									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-instagram"><use xlink:href="images/symbol-defs.svg#instagram"></use></svg></a>
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-vk"><use xlink:href="./images/symbol-defs.svg#vk"></use></svg></a>
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-youtube"><use xlink:href="./images/symbol-defs.svg#youtube"></use></svg></a>
+									<a href="#" target="_blank" rel="nofollow noopener"><svg class="icon icon-instagram"><use xlink:href="./images/symbol-defs.svg#instagram"></use></svg></a>
 								</div>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 	<div class="go-up" id="go-up-button">
 		<button class="go-up-btn btn">
 			<span>Наверх</span>
-			<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+			<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 		</button>
 	</div>
 
