--- a/app/parts/home/partners.html
+++ b/app/parts/home/partners.html
@@ -56,15 +56,15 @@
 			</div><!-- /.swiper-container -->
 			<div class="h-partners-slider-nav swiper-nav">
 				<button class="swiper-button-prev btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 				<button class="swiper-button-next btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 			</div><!-- /.h-partners-slider-nav -->
 			<div class="h-partners-slider-dots swiper-dots">
 				<div class="swiper-pagination"></div>
-				<a href="#" class="link-arrow">Все производители <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+				<a href="#" class="link-arrow">Все производители <svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg></a>
 			</div><!-- /.h-partners-slider-dots -->
 		</div><!-- /.h-partners-slider -->
 	</div><!-- /.container -->
