--- a/app/parts/home/popular-products.html
+++ b/app/parts/home/popular-products.html
@@ -38,10 +38,10 @@
 			</div><!-- /.swiper-container -->
 			<div class="products-slider-nav swiper-nav">
 				<button class="swiper-button-prev btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 				<button class="swiper-button-next btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 			</div><!-- /.products-slider-nav -->
 			<div class="products-slider-dots swiper-dots">
