--- a/app/parts/home/testimonials.html
+++ b/app/parts/home/testimonials.html
@@ -11,11 +11,11 @@
 						<div class="card card-testimonial">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">16 января 2020</div>
 							</div>
@@ -31,11 +31,11 @@
 						<div class="card card-testimonial">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">20 мая 2020</div>
 							</div>
@@ -51,11 +51,11 @@
 						<div class="card card-testimonial">
 							<div class="card-heading">
 								<div class="rating">
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
-									<svg class="icon icon-rating"><use xlink:href="images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating icon-rating--filled"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
+									<svg class="icon icon-rating"><use xlink:href="./images/symbol-defs.svg#rating"></use></svg>
 								</div>
 								<div class="date">9 октября 2020</div>
 							</div>
@@ -71,15 +71,15 @@
 			</div><!-- /.swiper-container -->
 			<div class="h-testimonials-slider-nav swiper-nav">
 				<button class="swiper-button-prev btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 				<button class="swiper-button-next btn">
-					<svg class="icon icon-arrow"><use xlink:href="images/symbol-defs.svg#arrow"></use></svg>
+					<svg class="icon icon-arrow"><use xlink:href="./images/symbol-defs.svg#arrow"></use></svg>
 				</button>
 			</div><!-- /.h-partners-slider-nav -->
 			<div class="h-testimonials-slider-dots swiper-dots">
 				<div class="swiper-pagination"></div>
-				<a href="#" class="link-arrow">Все отзывы <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+				<a href="#" class="link-arrow">Все отзывы <svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg></a>
 			</div><!-- /.h-partners-slider-dots -->
 		</div><!-- /.h-partners-slider -->
 	</div><!-- /.container -->
